@@ -523,6 +523,7 @@ namespace fim
 #define FIM_VID_SCALE_FACTOR_MULTIPLIER		"_scale_factor_multiplier"	/* "[internal,in] value used for scaling up/down the scaling factors" */
 #define FIM_VID_SCALE_FACTOR_DELTA		"_scale_factor_delta"		/* "[internal,in] value used for incrementing/decrementing the scaling factors" */
 #define FIM_VID_COMMENT 				"_comment"				/* "[internal,out] the image comment, extracted from the image file (if any)" */
+#define FIM_VID_COMMENT_OI 				"_comment_over_image"				/* "[experimental,in] if v:_comment_over_image is set not to 0, will display the contents of i:_comment over the image." */
 #define FIM_VID_EXIFTOOL_COMMENT 				"_exiftool_comment"				/* "[internal,out] comment extracted via the exiftool interface; see _use_exiftool." */
 #define FIM_VID_STEPS 				"_steps"				/* "[internal,in] the default steps, in pixels, when panning images" */
 #define FIM_VID_VERSION				"_fim_version"	/* "[internal,out] fim version number; may be used for keeping compatibility of fim scripts across evolving versions."  */
